[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = { path = "../common/packets" }
tracing-subscriber = {version = "0.3.1", features = ["json"]}
tracing = "0.1.29"
tracing-appender = "0.2"
threadpool = { path = "../common/threadpool" }
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"