[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = { path = "../common/packets" }
threadpool = { path = "../common/threadpool" }
thread_joiner = { path = "../common/thread_joiner" }
logger = { path = "../common/logger" }
rand = "0.8.4"
tracing = "0.1.29"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3.1", features = ["json"]}
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"