[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = { path = "../../common/packets" }
config = { path = "../common/config" }
threadpool = { path = "../../common/threadpool" }
mqtt_client = { path = "../../mqtt_client" }