[package]
name = "thermometer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
packets = { path = "../../common/packets" }
config = { path = "../common/config" }
mqtt_client = { path = "../../mqtt_client" }