[package]
name = "http_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packets = { path = "../../common/packets" }
logger = { path = "../../common/logger" }
tracing = "0.1.29"
config = { path = "../common/config" }
threadpool = { path = "../../common/threadpool" }
thread_joiner = { path = "../../common/thread_joiner" }
mqtt_client = { path = "../../mqtt_client" }